samples/_failures_safe/1761045427_c7cad2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ded64986.c: In function ‘main’:
./samples/SAFE/__tmp_ded64986.c:145:17: error: expected ‘;’ at end of input
  145 |         return 1
      |                 ^
      |                 ;
./samples/SAFE/__tmp_ded64986.c:145:9: error: expected declaration or statement at end of input
  145 |         return 1
      |         ^~~~~~
./samples/SAFE/__tmp_ded64986.c:145:9: error: expected declaration or statement at end of input
